--- a/index.html
+++ b/index.html
@@ -51,6 +51,40 @@
   anyone looking to start making extra cash hassle-free</p>  
  
  <a href="#" class="join-btn">JOIN NOW-IT'S FREE!</a>
+     
+      <!-- Swiper -->
+ <div class="swiper mySwiper">
+  <div class="swiper-wrapper">
+    <div class="swiper-slide"><img src="img/slider-1.png" alt="img1"></div>
+    <div class="swiper-slide"><img src="img/slider-2.png" alt="img1"></div>
+    <div class="swiper-slide"><img src="img/slider-3.png" alt="img1"></div>
+  </div>
+</div>
+  <div class="swiper-pagination"></div>
+
+ <!-- Swiper JS -->
+ <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+ 
+ <!-- Initialize Swiper -->
+ <script>
+   var swiper = new Swiper(".mySwiper", {
+     spaceBetween: 30,
+      centeredSlides: true,
+      autoplay: {
+        delay: 2500,
+        disableOnInteraction: false,
+      },
+      pagination: {
+        el: ".swiper-pagination",
+        clickable: true,
+      },
+    });
+  </script>
+
+<h2 class="second-heading">Define what you’re good at,
+   personalize your space, and you’re ready to go.</h2>
+<p class="p-second">3 minutes and you’re in business</p>
+
 
  </main>
 
