--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 <h1 class="heading">The easiest way to sell & manage
   your online services</h1>
 
-<p class="p-mainPage">All-in-one powerful web platform for 
+<p class="p-first">All-in-one powerful web platform for 
   anyone looking to start making extra cash hassle-free</p>  
  
  <a href="#" class="join-btn">JOIN NOW-IT'S FREE!</a>
